crates/parser/tests/snapshots/block_string_insufficient_indent.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-insufficient-indent

## Input

```
foo |
  bar
 baz

```

## CST

```
SOURCE_FILE@0..17
  ENTRY@0..17
    WORD_KEY@0..3
      WORD@0..3 "foo"
    SPACE@3..4 " "
    BLOCK_STRING@4..16
      BLOCK_STRING_HEADER@4..6
        PIPE@4..5 "|"
        NEWLINE@5..6 "\n"
      SPACE@6..8 "  "
      LINE_STRING@8..11
        STRING@8..11 "bar"
      NEWLINE@11..12 "\n"
      ERROR@12..16
        SPACE@12..13 " "
        WORD@13..16 "baz"
    NEWLINE@16..17 "\n"
```

## Syntax Error

```
[
    SyntaxError {
        message: "block string line has insufficient indentation",
        range: 12..12,
    },
]
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "foo",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: PIPE@4..5 "|",
                    chomp: none,
                },
                lines: [
                    LineString {
                        string: STRING@8..11 "bar",
                    },
                ],
            },
        },
    ],
}
```

vim:ft=markdown
