crates/parser/tests/snapshots/block_string_keep.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-keep

## Input

```
key |+
  hello

a b

```

## CST

```
SOURCE_FILE@0..20
  ENTRY@0..15
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..15
      BLOCK_STRING_HEADER@4..7
        PIPE@4..5 "|"
        PLUS@5..6 "+"
        NEWLINE@6..7 "\n"
      SPACE@7..9 "  "
      LINE_STRING@9..14
        STRING@9..14 "hello"
      NEWLINE@14..15 "\n"
      LINE_STRING@15..15
  NEWLINE@15..16 "\n"
  ENTRY@16..19
    WORD_KEY@16..17
      WORD@16..17 "a"
    SPACE@17..18 " "
    LINE_STRING@18..19
      STRING@18..19 "b"
  NEWLINE@19..20 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: PIPE@4..5 "|",
                    chomp: PLUS@5..6 "+",
                },
                lines: [
                    LineString {
                        string: STRING@9..14 "hello",
                    },
                    LineString {
                        string: none,
                    },
                ],
            },
        },
        Entry {
            key: WordKey {
                word: WORD@16..17 "a",
            },
            value: LineString {
                string: STRING@18..19 "b",
            },
        },
    ],
}
```

vim:ft=markdown
