crates/parser/tests/snapshots/block_string_multi_folded_clip_wsln_emptyln_emptyln_eof.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-multi-folded-clip-wsln-emptyln-emptyln-eof

## Input

```
key >
 
  hello

  world


```

## CST

```
SOURCE_FILE@0..26
  ENTRY@0..25
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..25
      BLOCK_STRING_HEADER@4..6
        GT@4..5 ">"
        NEWLINE@5..6 "\n"
      SPACE@6..7 " "
      LINE_STRING@7..7
      NEWLINE@7..8 "\n"
      SPACE@8..10 "  "
      LINE_STRING@10..15
        STRING@10..15 "hello"
      NEWLINE@15..16 "\n"
      LINE_STRING@16..16
      NEWLINE@16..17 "\n"
      SPACE@17..19 "  "
      LINE_STRING@19..24
        STRING@19..24 "world"
      NEWLINE@24..25 "\n"
      LINE_STRING@25..25
  NEWLINE@25..26 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: GT@4..5 ">",
                    chomp: none,
                },
                lines: [
                    LineString {
                        string: none,
                    },
                    LineString {
                        string: STRING@10..15 "hello",
                    },
                    LineString {
                        string: none,
                    },
                    LineString {
                        string: STRING@19..24 "world",
                    },
                    LineString {
                        string: none,
                    },
                ],
            },
        },
    ],
}
```

vim:ft=markdown
