crates/parser/tests/snapshots/block_string_multi_folded_keep_emptyln_emptyln_none_dedent.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-multi-folded-keep-emptyln-emptyln-none-dedent

## Input

```
key >+

  hello

  world
other val

```

## CST

```
SOURCE_FILE@0..35
  ENTRY@0..25
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..24
      BLOCK_STRING_HEADER@4..7
        GT@4..5 ">"
        PLUS@5..6 "+"
        NEWLINE@6..7 "\n"
      LINE_STRING@7..7
      NEWLINE@7..8 "\n"
      SPACE@8..10 "  "
      LINE_STRING@10..15
        STRING@10..15 "hello"
      NEWLINE@15..16 "\n"
      LINE_STRING@16..16
      NEWLINE@16..17 "\n"
      SPACE@17..19 "  "
      LINE_STRING@19..24
        STRING@19..24 "world"
    NEWLINE@24..25 "\n"
  ENTRY@25..35
    WORD_KEY@25..30
      WORD@25..30 "other"
    SPACE@30..31 " "
    LINE_STRING@31..34
      STRING@31..34 "val"
    NEWLINE@34..35 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: GT@4..5 ">",
                    chomp: PLUS@5..6 "+",
                },
                lines: [
                    LineString {
                        string: none,
                    },
                    LineString {
                        string: STRING@10..15 "hello",
                    },
                    LineString {
                        string: none,
                    },
                    LineString {
                        string: STRING@19..24 "world",
                    },
                ],
            },
        },
        Entry {
            key: WordKey {
                word: WORD@25..30 "other",
            },
            value: LineString {
                string: STRING@31..34 "val",
            },
        },
    ],
}
```

vim:ft=markdown
