crates/parser/tests/snapshots/block_string_multi_folded_keep_emptyln_wsln_none_eof.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-multi-folded-keep-emptyln-wsln-none-eof

## Input

```
key >+

  hello
 
  world

```

## CST

```
SOURCE_FILE@0..26
  ENTRY@0..26
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..25
      BLOCK_STRING_HEADER@4..7
        GT@4..5 ">"
        PLUS@5..6 "+"
        NEWLINE@6..7 "\n"
      LINE_STRING@7..7
      NEWLINE@7..8 "\n"
      SPACE@8..10 "  "
      LINE_STRING@10..15
        STRING@10..15 "hello"
      NEWLINE@15..16 "\n"
      SPACE@16..17 " "
      LINE_STRING@17..17
      NEWLINE@17..18 "\n"
      SPACE@18..20 "  "
      LINE_STRING@20..25
        STRING@20..25 "world"
    NEWLINE@25..26 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: GT@4..5 ">",
                    chomp: PLUS@5..6 "+",
                },
                lines: [
                    LineString {
                        string: none,
                    },
                    LineString {
                        string: STRING@10..15 "hello",
                    },
                    LineString {
                        string: none,
                    },
                    LineString {
                        string: STRING@20..25 "world",
                    },
                ],
            },
        },
    ],
}
```

vim:ft=markdown
