crates/parser/tests/snapshots/block_string_multi_folded_keep_wsln_wsln_emptyln_dedent.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-multi-folded-keep-wsln-wsln-emptyln-dedent

## Input

```
key >+
 
  hello
 
  world

other val

```

## CST

```
SOURCE_FILE@0..38
  ENTRY@0..28
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..27
      BLOCK_STRING_HEADER@4..7
        GT@4..5 ">"
        PLUS@5..6 "+"
        NEWLINE@6..7 "\n"
      SPACE@7..8 " "
      LINE_STRING@8..8
      NEWLINE@8..9 "\n"
      SPACE@9..11 "  "
      LINE_STRING@11..16
        STRING@11..16 "hello"
      NEWLINE@16..17 "\n"
      SPACE@17..18 " "
      LINE_STRING@18..18
      NEWLINE@18..19 "\n"
      SPACE@19..21 "  "
      LINE_STRING@21..26
        STRING@21..26 "world"
      NEWLINE@26..27 "\n"
      LINE_STRING@27..27
    NEWLINE@27..28 "\n"
  ENTRY@28..38
    WORD_KEY@28..33
      WORD@28..33 "other"
    SPACE@33..34 " "
    LINE_STRING@34..37
      STRING@34..37 "val"
    NEWLINE@37..38 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: GT@4..5 ">",
                    chomp: PLUS@5..6 "+",
                },
                lines: [
                    LineString {
                        string: none,
                    },
                    LineString {
                        string: STRING@11..16 "hello",
                    },
                    LineString {
                        string: none,
                    },
                    LineString {
                        string: STRING@21..26 "world",
                    },
                    LineString {
                        string: none,
                    },
                ],
            },
        },
        Entry {
            key: WordKey {
                word: WORD@28..33 "other",
            },
            value: LineString {
                string: STRING@34..37 "val",
            },
        },
    ],
}
```

vim:ft=markdown
